# 3DRenderer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: camera.h  display.h  engine.h  matrix.h  mesh.h  model.h  rasterizer.h  renderer.h  scene.h  shader.h  texture.h  transform.h  vector3d.h
src/: camera.cpp  display.cpp  engine.cpp  main.cpp  mesh.cpp  model.cpp  rasterizer.cpp  renderer.cpp  scene.cpp  texture.cpp  transform.cpp
